# rust-x402

./: .gitflow  .gitignore  CHANGELOG.md  Cargo.toml  INSTALLATION.md  PROJECT_STATUS.md  README.md  RELEASE_CHECKLIST.md  main.rs
.cursor/rules/: x402-rules.mdc
.github/workflows/: ci.yml  release.yml
examples/: actix_server.rs  axum_server.rs  client.rs  config.json  facilitator.rs  facilitator_discovery.rs  mainnet_server.rs  middleware_demo.rs  proxy_server.rs  real_implementation_demo.rs  real_wallet_integration.rs  template_demo.rs  warp_server.rs
scripts/: release.sh
src/: blockchain_facilitator.rs  client.rs  error.rs  facilitator.rs  facilitator_storage.rs  http3.rs  lib.rs  middleware.rs  proxy.rs  server.rs
src/crypto/: eip712.rs  jwt.rs  mod.rs  signature.rs  tests.rs
src/facilitator/: coinbase.rs  mod.rs  tests.rs
src/middleware/: config.rs  mod.rs  payment.rs  service.rs  tests.rs
src/types/: constants.rs  discovery.rs  facilitator.rs  mod.rs  network.rs  payment.rs
tests/: error_handling_tests.rs  integration_tests.rs  performance_tests.rs  real_implementation_tests.rs
