[package]
name = "rust-x402"
version = "0.2.2"
edition = "2021"
description = "HTTP-native micropayments with x402 protocol"
authors = ["Ryan Kung <ryan@example.com>"]
license = "GPL-3.0"
repository = "https://github.com/RyanKung/x402_rs"
homepage = "https://x402.org"
documentation = "https://docs.rs/rust-x402"
keywords = ["payment", "micropayment", "blockchain", "http", "web3"]
categories = ["api-bindings", "cryptography", "web-programming"]
readme = "README.md"

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
url = "2.5"
chrono = { version = "0.4", features = ["serde"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
percent-encoding = "2.0"
tokio = { version = "1.0", features = ["full"] }
http = "1.0"

# Streaming support (optional)
tokio-util = { version = "0.7", features = ["codec", "compat"], optional = true }
bytes = { version = "1.0", optional = true }
futures-util = { version = "0.3", optional = true }
http-body = { version = "1.0", optional = true }
http-body-util = { version = "0.1", optional = true }

# HTTP/3 support (optional)
h3 = { version = "0.0.8", optional = true }
h3-axum = { version = "0.1.0", optional = true }
h3-quinn = { version = "0.0.10", optional = true }
quinn = { version = "0.11", optional = true }
rcgen = { version = "0.13", optional = true }
rustls = { version = "0.23", optional = true }

# Web framework support (optional)
axum = { version = "0.8", features = ["json"], optional = true }
actix-web = { version = "4.0", optional = true }
warp = { version = "0.3", optional = true }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"], optional = true }

# Cryptographic dependencies
k256 = { version = "0.13", features = ["ecdsa", "sha256"] }
secp256k1 = { version = "0.28", features = ["recovery", "global-context"] }
ethereum-types = "0.14"
rlp = "0.5"
hex = "0.4"
rustc-hex = "2.1"
sha2 = "0.10"
sha3 = "0.10"
rand = "0.8"

# JWT for authentication
jsonwebtoken = "9.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Decimal arithmetic
rust_decimal = { version = "1.0", features = ["serde"] }

# Async trait support
async-trait = "0.1"

# Redis support (optional)
redis = { version = "0.26", features = ["tokio-comp", "connection-manager"], optional = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
mockito = "1.0"
env_logger = "0.11"

[features]
default = ["axum"]
axum = ["dep:axum", "dep:tower-http"]
actix-web = ["dep:actix-web"]
warp = ["dep:warp"]
http3 = ["dep:h3", "dep:h3-axum", "dep:h3-quinn", "dep:quinn", "dep:rcgen", "dep:rustls", "dep:bytes"]
streaming = ["dep:tokio-util", "dep:futures-util", "dep:http-body", "dep:http-body-util", "dep:bytes"]
multipart = ["streaming"]
redis = ["dep:redis"]

[[example]]
name = "axum_server"
path = "examples/axum_server.rs"
required-features = ["axum"]

[[example]]
name = "actix_server"
path = "examples/actix_server.rs"
required-features = ["actix-web"]

[[example]]
name = "warp_server"
path = "examples/warp_server.rs"
required-features = ["warp"]

[[example]]
name = "client"
path = "examples/client.rs"

[[example]]
name = "facilitator"
path = "examples/facilitator.rs"

[[example]]
name = "proxy_server"
path = "examples/proxy_server.rs"

[[example]]
name = "mainnet_server"
path = "examples/mainnet_server.rs"

[[bin]]
name = "facilitator"
path = "main.rs"
required-features = ["axum"]
